Bug 471974 - Cannot activate/deactivate any panel
Summary: Cannot activate/deactivate any panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-05 12:50 UTC by Patrick Silva
Modified: 2023-07-06 07:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-05 12:50:14 UTC
STEPS TO REPRODUCE
1. open Dolphin
2. try to activate/deactivate a Panel by pressing its respective shortcut:
Places - F9
Terminal - F4
Information - F11
Folders - F7
3. 

OBSERVED RESULT
nothing happens

EXPECTED RESULT
we can activate/deactivate any Panel

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Graphics Platform: Wayland
Comment 1 Nicolas Fella 2023-07-05 20:43:23 UTC
View > Show Panels > Foo doesn't work either
Comment 2 Bug Janitor Service 2023-07-05 21:15:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/565
Comment 3 Nicolas Fella 2023-07-06 07:52:01 UTC
Git commit 49f9a28f4a6fc1a021d56096bd9a511b7ea3d7bb by Nicolas Fella.
Committed on 05/07/2023 at 21:14.
Pushed by meven into branch 'kf6'.

Always enable panel dockwidget actions

Otherwise they are disabled when the docks are locked and panels can't be toggled

M  +1    -0    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/49f9a28f4a6fc1a021d56096bd9a511b7ea3d7bb