Always enable panel dockwidget actions

Otherwise they are disabled when the docks are locked and panels can't be toggled

BUG: 471974